--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,8 @@ services:
     env: python
     plan: free
     buildCommand: pip install --upgrade pip && pip install -r requirements_render.txt
-    startCommand: gunicorn wsgi:app
+    startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
-      - key: PORT
-        value: 10000
     healthCheckPath: /
