--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,12 @@ services:
     name: people-counter
     env: python
     plan: free
-    buildCommand: pip install --upgrade pip && pip install -r requirements_render.txt
+    buildCommand: |
+      python --version
+      pip install --upgrade pip
+      pip install -r requirements_render.txt
     startCommand: gunicorn wsgi:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.18
+        value: 3.11.8
     healthCheckPath: /
