--- a/requirements_render_cpu.txt
+++ b/requirements_render_cpu.txt
@@ -1,10 +1,10 @@
 Flask==2.3.3
-tensorflow-cpu==2.15.0
-tensorflow-hub==0.15.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.4
-pandas==2.1.4
+tensorflow==2.16.1
+tensorflow-hub==0.16.1
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+pandas==2.2.1
 openpyxl==3.1.2
-Pillow==10.1.0
+Pillow==10.2.0
 gunicorn==21.2.0
 Werkzeug==2.3.7
